--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "recruitment",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A recruitment site for the Daily Nexus",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Rowan Tran <web@dailynexus.com>",
   "dependencies": {
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-linaria": "^2.1.0",
     "gatsby-plugin-manifest": "^2.4.24",
     "gatsby-plugin-offline": "^3.2.24",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-source-filesystem": "^2.3.25",
+    "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.13",
+    "linaria": "^1.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.1.0"
+    "prettier": "2.1.0",
+    "sass": "^1.26.11"
   },
   "keywords": [
     "gatsby"
