--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-telemetry": "^1.3.35",
     "gatsby-transformer-remark": "^2.8.35",
