--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-telemetry": "^1.3.35",
+    "gatsby-transformer-json": "^2.4.13",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "linaria": "^1.3.3",
