--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@react-hook/window-scroll": "^1.3.0",
+    "aos": "^2.3.4",
     "gatsby": "^2.24.9",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-linaria": "^2.1.0",
