--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "@reach/router": "^1.3.4",
     "@react-hook/window-scroll": "^1.3.0",
     "aos": "^2.3.4",
-    "gatsby": "^2.24.9",
-    "gatsby-image": "^2.4.19",
+    "gatsby": "^3.0.0",
+    "gatsby-image": "^3.2.0",
     "gatsby-plugin-linaria": "^2.1.0",
-    "gatsby-plugin-manifest": "^2.4.31",
-    "gatsby-plugin-offline": "^3.2.28",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-sass": "^2.3.13",
-    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-telemetry": "^1.3.35",
-    "gatsby-transformer-json": "^2.4.13",
-    "gatsby-transformer-remark": "^2.8.35",
-    "gatsby-transformer-sharp": "^2.5.15",
-    "linaria": "^1.3.3",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-telemetry": "^2.2.0",
+    "gatsby-transformer-json": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "linaria": "^2.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
